--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x /project/gradlew
+      run: chmod +x ./project/gradlew
     - name: Build with Gradle
-      run: /project/gradlew build
+      run: ./project/gradlew build
